--- a/src/page01.html
+++ b/src/page01.html
@@ -18,5 +18,6 @@
   <script src="js/scripts.js"></script>
   <h1>Hello World!</h1>
   <h2>added a new line</h2>
+  <h3>and a third line</h3>
 </body>
 </html>
